--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="./index.css">
     <title>Blog Manager</title>
 </head>
 
 <body>
-    <script src="cms.js"></script>
+    <script type="module" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script type="module" src="./cms.js"></script>
 </body>
 
 </html>
