--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script type="module" src="../../src/cms.js"></script>
+    <script type="module" src="./cms.js"></script>
 </body>
 
 </html>
