updated index for admin

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="/admin/index.css">
     <title>Blog Manager</title>
 </head>
 
 <body>
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script type="module" src="cms.js"></script>
+    <script type="module" src="/admin/cms.js"></script>
 </body>
 
 </html>
