--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script type="module" src="/admin/cms.js"></script>
+    <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
 </body>
 
 </html>
