--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,10 +7,9 @@
 </head>
 
 <body>
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script type="module" src="/admin/cms.js"></script>
-    <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url">
 </body>
 
 </html>
