--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,6 +10,11 @@
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script type="module" src="/admin/cms.js"></script>
+    <script>
+        if (window.netlifyIdentity) {
+            window.netlifyIdentity.init();
+        }
+    </script>
 </body>
 
 </html>
