--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Portfolio website for Dusty Mumphrey, Full Stack Engineer."
     />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dustymumphrey.com">
+    <meta property="og:title" content="Dusty Mumphrey">
+    <meta property="og:description" content="Portfolio website for Dusty Mumphrey, Full Stack Engineer.">
+    <meta property="og:image" content="%PUBLIC_URL%/portfolio.png">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
